# test-pypi

./: .gitignore  .ppypric  pyproject.toml
src/test_panda_pypi/: main.py
