[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-pypi"
version = "0.0.1"
authors = [{ name = "Shawn Hu", email = "shawnhu97@gmail.com" }]
description = "A small example package of adding 2 numbers together"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TheFatPanda97/test-pypi"
Issues = "https://github.com/TheFatPanda97/test-pypi/issues"
